Changed exam dates, added favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Cybergurukulam</title>
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -79,6 +80,7 @@
                     </center>
                     <br>
                     <h1 style="text-align: left"><i>* as on February 2015</i></h1>
+                    <p>ATTENTION: FOLLOW OUR EMAIL NOTIFICATIONS FOR UPDATED SELECTION INFORMATION, OR <b> <a data-scroll href="#contact">CONTACT US</a></b></p>
 				</header>
 
 				<div class="box alt container">
@@ -122,16 +124,14 @@
                             <table class="default">
                                 <thead>
                                 <tr>
-                                    <th>Date</th>
-                                    <th>Time</th>
+                                    <th>Tentative date</th>
                                     <th>Syllabus</th>
                                     <th>Venue</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>11 April 2015</td>
-                                    <td>9am - 12pm</td>
+                                    <td>Last week of April, 2015</td>
                                     <td>Maths, Aptitude, Programming basics <br>( If you haven't learnt programming, we will still consider based on aptitude and maths :) )</td>
                                     <td>www.codechef.com</td>
                                 </tr>
@@ -157,7 +157,7 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>Week- 1 May 2015</td>
+                                    <td>First week of May, 2015</td>
                                     <td>Programming, Application Security, Web Security, Network Security, Cryptography, Forensics, Penetration Testing </td>
                                     <td>Amrita University, Amritapuri Campus </td>
                                 </tr>
