--- a/index.html
+++ b/index.html
@@ -38,10 +38,19 @@
         </script>
         <script src="//www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit" async defer></script>
         <script type="text/javascript">
-        var CaptchaCallback = function(){
-        grecaptcha.render('RecaptchaField1', {'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'});
-        grecaptcha.render('RecaptchaField2', {'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'});
-        };
+            var verifyCallback = function(response) {
+                alert(response);
+            };
+            var widgetId1;
+            var widgetId2;
+            var CaptchaCallback = function(){
+                widgetId1 = grecaptcha.render('RecaptchaField1', {
+                    'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'
+                });
+                widgetId2 = grecaptcha.render('RecaptchaField2', {
+                    'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'
+                });
+            };
         </script>
         <script src="js/smooth-scroll.js"></script>
         <script>
@@ -305,7 +314,8 @@
                         <div class="row">
                             <div class="12u">
                                 <ul class="actions">
-                                    <li><div id="RecaptchaField2" ></div></li><br>
+                                    <li>
+                                        <div id="RecaptchaField2" ></div></li><br>
                                     <li><input type="submit" value="Send Message" /></li>
                                 </ul>
                             </div>
