Corrected a minor grammatical error

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <blockquote> The students are on their own at this camp.
                             There will be no place where you have to use your school name except while registering.
                         </blockquote>
-                        3) People who are in 7 th standard going to 8 can the apply?
+                        3) People who are in 7th standard going to 8th can apply?
                         <blockquote> NO </blockquote>
                     </section>
 
