Added new field timestamp - changed the wallpaper - Information changes related to winter camp -  changes for sending successfull submission e-mail

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 			<div id="main">
 
 				<header class="major container 75%" style="text-align: left">
-                    <h2>THE TRAINING IS EXCLUSIVELY FOR VIII TO XI STUDENTS* REGISTERED IN KERALA SCHOOLS</h2>
+                    <h2>THE TRAINING IS EXCLUSIVELY FOR IX TO XII STUDENTS* REGISTERED IN KERALA SCHOOLS</h2>
                     <center>
                     <a data-scroll href="#faq" class="button">FAQ</a> &nbsp
                     <a data-scroll href="#schedule" class="button">Schedule</a>
                     </center>
                     <br>
-                    <h1 style="text-align: left"><i>* as on February 2015</i></h1>
+                    <h1 style="text-align: left"><i>* as on December 2015</i></h1>
                     <p>ATTENTION: FOLLOW OUR EMAIL NOTIFICATIONS FOR UPDATED SELECTION INFORMATION, OR <b> <a data-scroll href="#contact">CONTACT US</a></b></p>
 				</header>
 
@@ -192,8 +192,7 @@
                         <blockquote> The students are on their own at this camp.
                             There will be no place where you have to use your school name except while registering.
                         </blockquote>
-                        3) People who are in 7th standard going to 8th can apply?
-                        <blockquote> NO </blockquote>
+
                     </section>
 
                     </div>
@@ -238,10 +237,10 @@
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label>Current standard</label>
-                                    <label><input name="standard" type="radio" value="8" checked="checked"/> 8th </label>
-                                    <label><input name="standard" type="radio" value="9" /> 9th</label>
+                                    <label><input name="standard" type="radio" value="9" checked="checked"/> 9th </label>
                                     <label><input name="standard" type="radio" value="10" /> 10th</label>
                                     <label><input name="standard" type="radio" value="11" /> 11th</label>
+                                    <label><input name="standard" type="radio" value="12" /> 12th</label>
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                 <ul>
