login.html changed to match php page

--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-<form action="login.php" method="post" name="login">
+<form action="loginMethod.php" method="post" name="login">
     <div id="footer">
     <section class="6u 12u(mobilep)">
         <label for="email">Email:</label>
