Admin page - php and login.html changes

--- a/login.html
+++ b/login.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 
 <html>
 <head>
@@ -60,7 +59,7 @@
 </head>
 <body>
 
-<form action="loginMethod.php" method="post" name="login">
+<form action="php/loginMethod.php" method="post" name="login">
     <div id="footer">
     <section class="6u 12u(mobilep)">
         <label for="email">Email:</label>
@@ -84,14 +83,5 @@
     </div>
 </form>
 
-=======
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
->>>>>>> 46fef5ac7aa7b38dd70a18e6dd8d8ffafb025137
 </body>
 </html>
