Admin page - php and html changes

--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
 
     <div class="row">
         <div class="12u">
-            <ul class="actions">
+            <ul class="row">
                 <br><br>
                 <li><div id="RecaptchaField1" align="left"></div></li><br>
                 <li><input type="submit" value="Login" align="left"></li>
