Search page added with details

--- a/login.html
+++ b/login.html
@@ -71,16 +71,17 @@
         </section>
 
 
-    <div class="row">
-        <div class="12u">
-            <ul class="row">
-                <br><br>
-                <li><div id="RecaptchaField1" align="left"></div></li><br>
-                <li><input type="submit" value="Login" align="left"></li>
-            </ul>
+        <div class="row">
+            <div class="12u">
+                <ul class="actions">
+                    <li><br><br>
+                        <div id="RecaptchaField1" ></div></li><br>
+                    <li><input type="submit" value="login" /></li>
+                </ul>
+            </div>
         </div>
-    </div>
-    </div>
+   </div>
+
 </form>
 
 </body>
