--- a/login.html
+++ b/login.html
@@ -75,11 +75,13 @@
             <div class="12u">
                 <ul class="actions">
                     <li><br><br>
-                        <div id="RecaptchaField1" ></div></li><br>
+                        <div id="RecaptchaField1" class = "6u"></div></li><br>
                     <li><input type="submit" value="login" /></li>
+                    <li><input type="button" value="Register" onclick="location.href='/php/registerAdmin.php';" /></li>
                 </ul>
             </div>
         </div>
+
    </div>
 
 </form>
