trying out - removing captcha

--- a/login.html
+++ b/login.html
@@ -68,18 +68,16 @@
         <input class="password" type="password" name="email" id="password" value="" placeholder="" />
         </section>
 
-<!--
         <div class="row">
             <div class="12u">
                 <ul class="actions">
-                    <li><br><br>
-                        <div id="RecaptchaField1" class = "6u"></div></li><br>
+                    <!-- <li><br><br>
+                        <div id="RecaptchaField1" class = "6u"></div></li> --> <br>
                     <li><input type="submit" value="login" /></li>
                     <li><input type="button" value="Register" onclick="location.href='/php/registerAdmin.php';" /></li>
                 </ul>
             </div>
         </div>
-        -->
 
    </div>
 
