--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
                 <ul class="actions">
                     <!-- <li><br><br>
                         <div id="RecaptchaField1" class = "6u"></div></li> --> <br>
-                    <li><input type="submit" value="login" /></li>
+                    <li><input type="submit" value="login" onclick="location.href='/php/loginMethod.php';" /></li>
                     <li><input type="button" value="Register" onclick="location.href='/php/registerAdmin.php';" /></li>
                 </ul>
             </div>
