--- a/login.html
+++ b/login.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Secure Login: Registration Form</title>
-    <script type="text/JavaScript" src="js/sha512.js"></script>
-    <script type="text/JavaScript" src="js/forms.js"></script>
-    <link rel="stylesheet" href="styles/main.css" />
-
+    <title>Cybergurukulam</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/init.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="css/skel.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-wide.css" />
     </noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
     <style>
@@ -30,12 +37,14 @@
             alert(response);
         };
         var widgetId1;
-
+        var widgetId2;
         var CaptchaCallback = function(){
             widgetId1 = grecaptcha.render('RecaptchaField1', {
                 'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'
             });
-
+            widgetId2 = grecaptcha.render('RecaptchaField2', {
+                'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'
+            });
         };
     </script>
     <script src="js/smooth-scroll.js"></script>
@@ -44,8 +53,6 @@
             speed: 1000
         } );
     </script>
-        <script type="text/JavaScript" src="js/sha512.js"></script>
-    <script type="text/JavaScript" src="js/forms.js"></script>
 </head>
 <body>
 
