trying out - removing captcha ..

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     </tr>
     <tr height = 50>
             <td><label for="password">Password:</label></td>
-            <td><input type="password" name="email" id="password" value=""> </td>
+            <td><input type="password" name="password" id="password" value=""> </td>
         </tr>
     <tr height = 50>
         <td>  </td>
