trying out - connection problem

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <script type="text/JavaScript" src="js/forms.js"></script>
 </head>
 
-<body>
+<body bgcolor="#5f9ea0" >
 
 <form action="php/loginMethod.php" method="post" name="login"></form>
     <br><br><br><br>
